AFS_Dev/src/objects/AT_Adoption_Trend__c.object
<CustomObject>
    <description>Analytic Snapshot storage for user adoption trends</description>
    <fields>
        <fullName>Editing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who performed the edit (or creation) of the record</description>
        <label>Editing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adoption_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object for which statistics were collected</description>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Date and time that the statistics were collected</description>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <label>Adoption Trend</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Adoption Trend ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>